--- a/documentation.html
+++ b/documentation.html
@@ -23,14 +23,17 @@
 
   <!-- INTRO SECTION -->
 
-  <body>
+  <body style="padding-top: 1rem;">
     <section id="sidebar">
+    </section>
+    <section id="footer">
     </section>
 
 
 
     <script async src="globals/sidebar.js"></script>
     <script async src="globals/navbar.js"></script>
+    <script async src="globals/footer.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 
