--- a/globals/navbar.html
+++ b/globals/navbar.html
@@ -1,30 +1,59 @@
-<nav class="navbar navbar-expand-lg menu shadow fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="index.html"><img src="media/logo/Tascal-Logo@4x.png" height="25px" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="#">Home</a>
-                </li>
-            </ul>
-            <button type="button" class="rounded-pill btn-rounded">+382 68 296 034
-                <span>
-                    <i class="fas fa-phone-alt"></i>
-                </span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+</head>
+<body id="GLOBAL_NAVBAR">
+    <nav  class="navbar navbar-expand-lg menu shadow fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html"><img src="../media/logo/Tascal-Logo@4x.png" height="25px" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active " aria-current="page" href="#">Our Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active " aria-current="page" href="#">Partnerships</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active " aria-current="page" href="#">Certifications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active " aria-current="page" href="#">Awards</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active " aria-current="page" href="#">Recent Projects</a>
+                    </li>
+                    <li class="nav-item pe-4">
+                        <a class="nav-link active " aria-current="page" href="#">Documentation</a>
+                    </li>
+                </ul>
+                <button type="button" class="rounded-pill btn-rounded">+382 68 296 034
+                    <span>
+                        <i class="fas fa-phone-alt"></i>
+                    </span>
+                </button>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+</body>
+</html>
+
+
