--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
   <!-- SECTION SERVICES -->
   <section id="SERVICES">
     <!-- Wave -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#14253e" fill-opacity="1"
         d="M0,288L26.7,272C53.3,256,107,224,160,192C213.3,160,267,128,320,133.3C373.3,139,427,181,480,181.3C533.3,181,587,139,640,101.3C693.3,64,747,32,800,42.7C853.3,53,907,107,960,112C1013.3,117,1067,75,1120,85.3C1173.3,96,1227,160,1280,170.7C1333.3,181,1387,139,1413,117.3L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z">
       </path>
-    </svg>
-    <div class="container">
+    </svg> -->
+    <div class="container" style="margin-top: 5rem;">
       <!-- HEAD -->
       <div class="row">
         <p class="display-4 fw-bold text-primary text-center">Our Services</p>
@@ -349,7 +349,6 @@
 
   <!-- SECTION COMMISSIONING AND STARTUP -->
   <section id="COMMISSIONING" class="bg-primary p-5">
-    <!-- Light -> Dark Wave -->
 
     <div class="container">
       <!-- HEAD -->
@@ -387,7 +386,6 @@
 
   <!-- SECTION MAINTENANCE -->
   <section id="MAINTENANCE" class="bg-white p-5">
-    <!-- Light -> Dark Wave -->
 
     <div class="container mb-0">
       <!-- HEAD -->
@@ -397,7 +395,7 @@
           <p class="badge badge-info bg-secondary-subtle text-primary border border-secondary border-2 my-0 ">For
             existing buildings</p>
           <br>
-          <span class="display-4 fw-bold text-center" >Maintenance <br></span>
+          <span class="display-4 fw-bold text-center">Maintenance <br></span>
         </div>
       </div>
       <div class="heading-line mb-5"></div>
@@ -429,93 +427,112 @@
 
 
   <!-- SECTION PARTNERSHIPS -->
-  <section id="PARTNERSHIPS">
-    <!-- LIGHT -> DARK  Wave -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#15263f" fill-opacity="1" d="M0,192L9.2,202.7C18.5,213,37,235,55,218.7C73.8,203,92,149,111,117.3C129.2,85,148,75,166,80C184.6,85,203,107,222,101.3C240,96,258,64,277,74.7C295.4,85,314,139,332,138.7C350.8,139,369,85,388,69.3C406.2,53,425,75,443,112C461.5,149,480,203,498,197.3C516.9,192,535,128,554,128C572.3,128,591,192,609,202.7C627.7,213,646,171,665,144C683.1,117,702,107,720,128C738.5,149,757,203,775,208C793.8,213,812,171,831,144C849.2,117,868,107,886,138.7C904.6,171,923,245,942,240C960,235,978,149,997,138.7C1015.4,128,1034,192,1052,213.3C1070.8,235,1089,213,1108,186.7C1126.2,160,1145,128,1163,122.7C1181.5,117,1200,139,1218,144C1236.9,149,1255,139,1274,122.7C1292.3,107,1311,85,1329,96C1347.7,107,1366,149,1385,149.3C1403.1,149,1422,107,1431,85.3L1440,64L1440,320L1430.8,320C1421.5,320,1403,320,1385,320C1366.2,320,1348,320,1329,320C1310.8,320,1292,320,1274,320C1255.4,320,1237,320,1218,320C1200,320,1182,320,1163,320C1144.6,320,1126,320,1108,320C1089.2,320,1071,320,1052,320C1033.8,320,1015,320,997,320C978.5,320,960,320,942,320C923.1,320,905,320,886,320C867.7,320,849,320,831,320C812.3,320,794,320,775,320C756.9,320,738,320,720,320C701.5,320,683,320,665,320C646.2,320,628,320,609,320C590.8,320,572,320,554,320C535.4,320,517,320,498,320C480,320,462,320,443,320C424.6,320,406,320,388,320C369.2,320,351,320,332,320C313.8,320,295,320,277,320C258.5,320,240,320,222,320C203.1,320,185,320,166,320C147.7,320,129,320,111,320C92.3,320,74,320,55,320C36.9,320,18,320,9,320L0,320Z"></path></svg>
+  <section id="PARTNERSHIPS" class="my-5 py-5">
 
     <!-- Content -->
-    <div class="container-fluid bg-primary" style="padding-bottom: 8rem;">
+    <div class="container-fluid bg-primary my-5 py-5">
       <!-- Text -->
       <div class="container bg-primary mb-5 px-5">
         <div class="row">
           <p class="display-4 fw-bold text-white text-center">Our Partners</p>
           <div class="heading-line-white mb-5"></div>
         </div>
-        <p class="lead text-white">
-          Success is impossible without meaningfull relationships.
-          <br>
-          <br>
-          In the last 2 decades on the market we've had the opportunity to show how commited we are to
-          providing
-          uncompromising solutions and services. The work we've done in the domain of electrical engineering
-          has
-          resulted in the formal recognition by the industry leading vendors.
-          Our partners trust us to keep delivering uncompromosing results - <strong class="fw fw-semibold">Why wouldn't
-            you?</strong>
-        </p>
-        <p>
-          <a href="/docs/5.3/getting-started/download/" class="customHover fw-semibold ">
-            <span>Read more about partnerships</span>
-            <i class="fa fa-arrow-right"></i>
-          </a>
-        </p>
-        <p>
-          <a href="/docs/5.3/getting-started/download/" class="customHover fw-semibold ">
-            <span>Request an inquiry</span>
-            <i class="fa fa-arrow-right"></i>
-          </a>
-        </p>
-      </div>
-      <!-- Cards -->
-      <div class="container px-5 mb-4">
-        <div class="d-sm-flex flex-row">
-          <div class="card border-0 shadow-lg m-1">
-            <div class="card-body p-0">
-              <img src="media/Partnerships/Siemens@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
-            </div>
-            <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
-              <p class="fw text-center text-white py-0 my-1 fw-semibold">Solution Partner</p>
-            </div>
+        <div class="row">
+          <div class="col">
+            <p class="lead text-white">
+              Success is impossible without meaningfull relationships.
+              <br>
+              <br>
+              In the last 2 decades on the market we've had the opportunity to show how commited we are to
+              providing
+              uncompromising solutions and services. The work we've done in the domain of electrical engineering
+              has
+              resulted in the formal recognition by the industry leading vendors.
+              Our partners trust us to keep delivering uncompromosing results - <strong class="fw fw-semibold">Why
+                wouldn't
+                you?</strong>
+            </p>
+            <p>
+              <a href="/docs/5.3/getting-started/download/" class="customHover fw-semibold ">
+                <span>Read more about partnerships</span>
+                <i class="fa fa-arrow-right"></i>
+              </a>
+            </p>
+            <p>
+              <a href="/docs/5.3/getting-started/download/" class="customHover fw-semibold ">
+                <span>Request an inquiry</span>
+                <i class="fa fa-arrow-right"></i>
+              </a>
+            </p>
           </div>
 
-          <div class="card border-0 shadow-lg m-1">
-            <div class="card-body p-0">
-              <img src="media/Partnerships/Eaton@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
+          <div class="col">
+            <div class="row">
+              <div class="card border-0 shadow-lg m-1">
+                <div class="card-body p-0">
+                  <img src="media/Partnerships/Siemens@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
+                </div>
+                <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
+                  <p class="fw text-center text-white py-0 my-1 fw-semibold">Solution Partner</p>
+                </div>
+              </div>
             </div>
-            <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
-              <p class="fw text-center text-white py-0 my-1 fw-semibold">Registered Partner</p>
+            <div class="row">
+              <div class="col">
+                <div class="card border-0 shadow-lg m-1">
+                  <div class="card-body p-0">
+                    <img src="media/Partnerships/Eaton@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
+                  </div>
+                  <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
+                    <p class="fw text-center text-white py-0 my-1 fw-semibold">Registered Partner</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card border-0 shadow-lg m-1">
+                  <div class="card-body p-0">
+                    <img src="media/Partnerships/Hager@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
+                  </div>
+                  <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
+                    <p class="fw text-center text-white py-0 my-1 fw-semibold">Registered Partner</p>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
+            <!-- Cards -->
+            <div class="container px-5 mb-4">
+              <div class="d-sm-flex flex-row">
 
-          <div class="card border-0 shadow-lg m-1">
-            <div class="card-body p-0">
-              <img src="media/Partnerships/Hager@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
-            </div>
-            <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
-              <p class="fw text-center text-white py-0 my-1 fw-semibold">Registered Partner</p>
-            </div>
-          </div>
 
-          <div class="card border-0 shadow-lg m-1">
-            <div class="card-body p-0">
-              <img src="media/Partnerships/Loxone@4x.png" class="img-fluid grayscale" alt="Tascal Engineering">
-            </div>
-            <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
-              <p class="fw text-center text-white py-0 my-1 fw-semibold">Silver Partner</p>
-            </div>
-          </div>
 
-          <div class="card border-0 shadow-lg m-1">
-            <div class="card-body p-0">
-              <img src="media/Partnerships/Smarteh@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
-            </div>
-            <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
-              <p class="fw text-center text-white py-0 my-1 fw-semibold">Solution Partner </p>
+
+
+
+                <div class="card border-0 shadow-lg m-1">
+                  <div class="card-body p-0">
+                    <img src="media/Partnerships/Loxone@4x.png" class="img-fluid grayscale" alt="Tascal Engineering">
+                  </div>
+                  <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
+                    <p class="fw text-center text-white py-0 my-1 fw-semibold">Silver Partner</p>
+                  </div>
+                </div>
+
+                <div class="card border-0 shadow-lg m-1">
+                  <div class="card-body p-0">
+                    <img src="media/Partnerships/Smarteh@4x.png" class="img-fluid grayscale " alt="Tascal Engineering">
+                  </div>
+                  <div class="card-footer bg-secondary text-center py-0 my-0 px-0">
+                    <p class="fw text-center text-white py-0 my-1 fw-semibold">Solution Partner </p>
+                  </div>
+                </div>
+
+              </div>
             </div>
           </div>
 
         </div>
       </div>
+
       <!-- More -->
       <div class="container">
 
@@ -539,13 +556,13 @@
   <!-- FOOTER SECTION -->
 
   <!-- Footer -->
-  
 
 
 
 
-    <!-- NAVBAR -->
-    <section id="footer"></section>
+
+  <!-- NAVBAR -->
+  <section id="footer"></section>
 
 
 
